--- a/tex/13.tex
+++ b/tex/13.tex
@@ -38,6 +38,8 @@ terms of some other basis $\{\phi_i\}$.
 
 %------------------------------------------------------------------------------
 \section{Prime basis: collapsed-coordinate polynomials}
+\index{prime basis}
+\index{collapsed-coordinate polynomial}
 
 High order polynomials in floating-point arithmetic require stable
 evaluation algorithms.  FIAT uses the so-called collapsed-coordinate
@@ -141,6 +143,8 @@ multiplication.  This helps eliminate the interpretive overhead of Python
 by moving numerical computation into optimized library routines,
 since \texttt{numpy.dot} wraps level 3 BLAS and other functions such as
 \texttt{numpy.svd} wrap relevant LAPACK routines.
+
+\index{Dubiner polynomial}
 
 Since polynomials and functionals over polynomials both form vector
 spaces, it is natural to represent each of them as vectors containing
@@ -353,6 +357,7 @@ polynomials of complete degree or else by constraining such a space by
 some linear functionals.  We describe such techniques in this section.
 
 \subsection{Supplemented polynomial spaces}
+\index{polynomial space!supplemented}
 
 A classic example of the first case is the Raviart--Thomas element,
 where the function space of order \(q \) is
@@ -383,6 +388,7 @@ bubble function, such as the PEERS element of elasticity or MINI
 element for Stokes flow.
 
 \subsection{Constrained polynomial spaces}
+\index{polynomial space!constrained}
 
 An example of the second case is the Brezzi--Douglas--Fortin--Marini
 element~\citep{BrezziFortin1991}.  Let \( \mathcal{E}(T) \) be the set of
