--- a/tex/15.tex
+++ b/tex/15.tex
@@ -42,6 +42,8 @@ much more convenient in this language.
 %\emp{\$FENICSBOOK/src/syfi-sfc}.
 
 \section{GiNaC and Swiginac}
+\index{GiNaC}
+\index{Swiginac}
 
 GiNaC~\citep{BauerFrinkKreckel2000} is an open source C++ library
 for symbolic calculations.  It contains the tools for doing basic
