--- a/tex/16.tex
+++ b/tex/16.tex
@@ -60,6 +60,7 @@ coefficient data that is given as input to the assembler.
 %------------------------------------------------------------------------------
 \section{Finite element discretization and assembly}
 \label{sec:alnes-2fem}
+\index{assembly}
 
 In Chapter~\ref{chap:logg-3}, we described the assembly algorithm for
 computing the global rank~$\rho$ tensor~$A$ corresponding to a
@@ -129,6 +130,7 @@ over an interior facet~$S^0$ as an \emph{interior facet integral}
 %------------------------------------------------------------------------------
 \section{The UFC interface}
 \label{sec:alnes-2:ufc:syntax}
+\index{UFC interface}
 
 \begin{figure}
 \bwfig
@@ -342,6 +344,7 @@ operation that depends on the linear algebra backend used to store the
 global tensor.
 
 \subsection{Code generation utilities}
+\index{code generation utilities}
 
 UFC provides a number of utilities that can be used by form compilers
 to simplify the code generation process, including templates for
@@ -433,6 +436,7 @@ examples of input to the form compilers FFC and SFC as well as part of
 the corresponding UFC code generated as output.
 
 \subsection{Assembler}
+\index{assembly!implementation}
 
 The simple assembler presented in this section assumes that the
 degrees of freedom of the finite element spaces involved depend only
@@ -685,10 +689,7 @@ for tabulating the cell and facet tensors as well as local-to-global
 maps.
 
 \subsection{Reference cells}
-
-%\input{chapters/alnes-2/referencecells_common.tex}
-
-\index{reference cells}
+\index{reference cell}
 
 The following five reference cells are covered by the UFC
 specification: the reference \emph{interval}, the reference
@@ -715,6 +716,7 @@ cells are listed in the table below.
 
 \paragraph{The reference interval.}
 \index{interval}
+\index{reference cell!interval}
 
 The reference interval and the coordinates of its two vertices are
 shown in the figure and table below.
@@ -738,6 +740,7 @@ shown in the figure and table below.
 
 \paragraph{The reference triangle.}
 \index{triangle}
+\index{reference cell!triangle}
 
 The reference triangle and the coordinates of its three vertices are
 shown in figure and table below.
@@ -761,6 +764,7 @@ shown in figure and table below.
 
 \paragraph{The reference quadrilateral.}
 \index{quadrilateral}
+\index{reference cell!quadrilateral}
 
 The reference quadrilateral and the coordinates of its four vertices
 are shown in the figure and table below.
@@ -785,6 +789,7 @@ are shown in the figure and table below.
 
 \paragraph{The reference tetrahedron.}
 \index{tetrahedron}
+\index{reference cell!tetrahedron}
 
 The reference tetrahedron and the coordinates of its four vertices are
 shown in the figure and table below.
@@ -809,6 +814,7 @@ shown in the figure and table below.
 
 \paragraph{The reference hexahedron.}
 \index{hexahedron}
+\index{reference cell!hexahedron}
 
 The reference hexahedron and the coordinates of its eight vertices are
 shown in the figure and table below.
@@ -1018,6 +1024,7 @@ edges incident to vertices.
 
 \paragraph{Numbering of mesh entities on intervals.}
 \index{interval}
+\index{numbering!interval}
 
 The numbering of mesh entities on interval cells is summarized in the
 table below.
@@ -1036,6 +1043,7 @@ table below.
 
 \paragraph{Numbering of mesh entities on triangular cells.}
 \index{triangle}
+\index{numbering!triangle}
 
 The numbering of mesh entities on triangular cells is summarized in the
 table below.
@@ -1058,6 +1066,7 @@ table below.
 
 \paragraph{Numbering of mesh entities on quadrilateral cells.}
 \index{quadrilateral}
+\index{numbering!quadrilateral}
 
 The numbering of mesh entities on quadrilateral cells is summarized in the
 table below.
@@ -1082,6 +1091,7 @@ table below.
 
 \paragraph{Numbering of mesh entities on tetrahedral cells.}
 \index{tetrahedron}
+\index{numbering!tetrahedron}
 
 The numbering of mesh entities on tetrahedral cells is summarized in the
 table below.
@@ -1112,6 +1122,7 @@ table below.
 
 \paragraph{Numbering of mesh entities on hexahedral cells.}
 \index{hexahedron}
+\index{numbering!hexahedron}
 
 The numbering of mesh entities on hexahedral cells is summarized in
 the table below.
