--- a/tex/19.tex
+++ b/tex/19.tex
@@ -33,6 +33,7 @@ used to generate Python interfaces for other packages such as Diffpack
 and Trilinos.
 
 \section{Using SWIG}
+\index{SWIG}
 
 Python and C++ are two very different languages, while Python is
 user--friendly and flexible, C++ is very efficient.  To combine the
@@ -332,9 +333,13 @@ would put in a standard C++ program. The code in the second block,
 Python module is initialized. A typical example of such a function is
 \emp{import\_array()}, which initializes the \numpy module. SWIG provides
 several such statements, each inserting code verbatim into the wrapper
-file at different positions. 
+file at different positions.
 
 \subsection{Reference counting using \emp{shared\_ptr}}
+
+\index{reference counting}
+\index{shared pointer}
+
 In the previous example dealing with \emp{operator+=}, we saw that
 it is important to prevent premature destruction of underlying C++
 objects. A nice feature of SWIG is that we can declare that a wrapped
@@ -385,6 +390,8 @@ reference constructor (see \emp{function\_pre.i}):
 \end{swigcode}
 
 \subsection{Typemaps}
+\index{typemap}
+
 Most types in the \emp{kernel\_module.i} file are wrapped nicely with
 SWIG. However, as in the \emp{Array} example above, there is need for
 typemaps, for instance to handle \numpy arrays. In \emp{dolfin.i} we
@@ -740,7 +747,7 @@ this functionality is found in \emp{mesh\_pre.i}:
 					self->geometry().dim(),
 					self->coordinates(), true);
   }
-  
+
   PyObject* cells() {
     return %make_numpy_array(2, uint)(self->num_cells(), self->topology().dim()+1,
 				      self->cells(), false);
@@ -753,7 +760,7 @@ Here we first ignore the C++ versions of the \emp{coordinates} and
 C-array, together with the dimension and size of that array. The last
 argument is used to set the writable flag of the NumPy array. This
 flag is set to \emp{true} for \emp{coordinates} and false for
-\emp{cells}. 
+\emp{cells}.
 
 In a similar fashion we use the \emp{make\_numpy\_array} macro to wrap
 the connectivity information to Python. This is done with the
@@ -980,6 +987,7 @@ subclasses of \emp{SubDomain} from Python.
 
 
 \section{Debugging mixed language applications}
+\index{debugging}
 
 Debugging mixed language applications may be more challenging than
 debugging single language applications.  The main reason is that
