--- a/tex/2.tex
+++ b/tex/2.tex
@@ -482,6 +482,7 @@ correctly.
 \enlargethispage{-5pt}
 \vspace*{4pt}
 \subsection{The finite element definition}
+\index{finite element!definition}
 
 Once a domain~$\Omega$ has been partitioned into cells, one may define
 a local function space $\CiarletSpace$ on each cell $T$ and use these
@@ -658,6 +659,8 @@ two triangles.
 \end{figure}
 
 \subsection{The global function space}
+\index{function space}
+
 One may now define the global function space $V_h$ as the set of
 functions on $\Omega$ satisfying the following pair of conditions. We
 first require that
