--- a/tex/20.tex
+++ b/tex/20.tex
@@ -17,6 +17,7 @@ formulations to be created with ease.
 %------------------------------------------------------------------------------
 \section{Stokes equations}
 \label{sec:terrel:Stokes}
+\index{Stokes equations}
 
 The Stokes equations describe steady, incompressible low Reynolds number
 flows. For a domain $\Omega \subset \mathbb{R}^{d}$, where $1 \le d \le
@@ -260,6 +261,7 @@ for the different presented methods.
 
 %------------------------------------------------------------------------------
 \subsection{Pressure stabilized method}
+\index{stabilization}
 
 To alleviate the difficulties of finding LBB-compatible function
 spaces, one may use stabilization techniques.  Pressure stabilization
@@ -307,6 +309,7 @@ code in Figure~\ref{code:terrel:var:mixed}.}
 \end{figure}
 %------------------------------------------------------------------------------
 \section{A penalty approach: the Scott--Vogelius method}
+\index{Scott--Vogelius method}
 
 Other solutions to deal with the LBB condition include the Uzawa iteration
 method and penalty methods.  A combination of these two approaches results
