--- a/tex/21.tex
+++ b/tex/21.tex
@@ -179,6 +179,7 @@ that have been tested.
 
 \subsection{Chorin's projection method}
 \label{sec:chorin}
+\index{Chorin's method}
 
 This scheme, often referred to as a non-incremental pressure
 correction scheme, was first proposed by \citet{Chorin1968} and
@@ -258,6 +259,8 @@ L3 = inner(us, v)*dx - k*inner(nabla_grad(p1), v)*dx
 
 \subsection{Incremental pressure correction scheme (IPCS)}
 \label{sec:ipcs}
+\index{incremental pressure correction}
+\index{IPCS}
 
 An improvement of the non-incremental pressure correction scheme is
 possible if the previous value for the pressure is used to compute the
@@ -339,6 +342,8 @@ L3 = inner(u1, v)*dx - k*inner(nabla_grad(p1 - p0), v)*dx
 
 \subsection{Consistent splitting scheme (CSS)}
 \label{sec:css}
+\index{consistent splitting scheme}
+\index{CSS}
 
 The consistent splitting scheme, as described
 in \citet{GuermondMinevShen2006,GuermondShen2003}, is derived
@@ -521,6 +526,7 @@ L3 = p1*q*dx + psi*q*dx - nu*nabla_div(u1)*q*dx
 
 \subsection{A least-squares stabilized Galerkin method (G2)}
 \label{sec:g2}
+\index{G2}
 
 The G2 method is a stabilized finite element method using piecewise
 linear discretization in space and time. The version of G2 studied in
@@ -650,6 +656,8 @@ Lw = inner(u1, z)*dx
 \end{figure}
 
 \subsection{A saddle-point solver for a pure Galerkin discretization (GRPC)}
+\index{saddle-point problem}
+\index{GRPC}
 
 Finally, we test a scheme based on a pure space-time Galerkin finite
 element discretization of the incompressible Navier--Stokes equations
@@ -838,6 +846,7 @@ main iteration was set to a value between 1e-6 to 1e-12 with higher
 values in cases where the convergence was slow (or non-existent).
 
 \subsection{Driven cavity (2D)}
+\index{driven cavity}
 
 A classical benchmark problem for fluid flow solvers is the
 two-dimensional lid-driven cavity problem. We consider a square cavity
@@ -945,6 +954,7 @@ solver. We further observe a clear difference between \css{1} and
 \end{figure}
 
 \subsection{Pressure-driven channel flow (2D)}
+\index{pressure-driven channel}
 
 As a second test problem, we seek the solution of the Navier--Stokes
 equations in a two-dimensional pressure-driven channel. The geometry
@@ -981,6 +991,7 @@ discretization which results in a vertex located at $(x, y) = (1,
 \end{figure}
 
 \subsection{Taylor--Green vortex (2D)}
+\index{Taylor--Green vortex}
 
 As our next test problem, we consider the Taylor--Green vortex
 described in \citet{CanutoHussainiQuarteroniEtAl2007}, which is a
@@ -1055,6 +1066,7 @@ solver.
 \end{figure}
 
 \subsection{Flow past a cylinder (2D)}
+\index{cylinder flow}
 
 We next consider a test problem from \citet{Turek1996}, which is a
 two-dimensional cylinder submerged into a fluid and surrounded by
@@ -1106,6 +1118,7 @@ fastest.
 \end{figure}
 
 \subsection{Beltrami flow (3D)}
+\index{Beltrami flow}
 
 We next consider a problem described in \citet{EthierSteinmann1994},
 where an exact fully three-dimensional solution of the Navier--Stokes
