--- a/tex/22.tex
+++ b/tex/22.tex
@@ -11,6 +11,8 @@
               {Mikael Mortensen, Kent-Andre Mardal and Hans Petter Langtangen}
               {mortensen}
 
+\index{transition to turbulence}
+
 %------------------------------------------------------------------------------
 
 The purpose of this work is to validate Navier--Stokes (NS) solvers
@@ -150,6 +152,7 @@ methods, and their implementation in FEniCS.
 
 \section{Numerical method and energy conservation}
 \label{sec:mortensen:Numerical}
+\index{energy conservation}
 
 In this section we will discuss both the spatial and temporal
 discretizations of the Navier--Stokes (NS) equations, and special
@@ -163,6 +166,7 @@ significantly.
 
 \subsection{Convection}
 \label{sec:mortensen:Convection}
+\index{convection}
 
 Let $\Omega \subset \Rset^d$ be an open and bounded region in $\Rset^d$,
 where $d$ is the number of spatial dimensions, with smooth boundary
@@ -251,6 +255,7 @@ and contaminate the (of primary importance) kinetic energy of the flow.
 
 \subsection{Kinetic energy}
 \label{sec:mortensen:kinetic}
+\index{kinetic energy}
 
 A dynamic equation for $K$ can be derived from \eqref{eq:mortensen:NS}
 by taking the scalar product of the momentum equation and $\vec{u}$,
@@ -825,6 +830,7 @@ obstructions.
 
 \subsection{Burgers' equation}
 \label{sec:mortensen:burgers}
+\index{Burgers' equation}
 
 Burgers' equation reads:
 \begin{align}
@@ -925,8 +931,9 @@ treated implicitly.
   \label{fig:mortensen:burgers_KE}
 \end{figure}
 
-\subsection{Orr--Sommerfeld}
+\subsection{Orr--Sommerfeld equation}
 \label{sec:mortensen:OS}
+\index{Orr--Sommerfeld equation}
 
 The Orr--Sommerfeld equation (see \citet{Orzag1971}) is derived by
 assuming a wave-like disturbance (perturbation) that is proportional to
@@ -1227,9 +1234,9 @@ instability have been reported by \citet{MalikZangHussaini1984} and
 \label{fig:mortensen:OS_long_time}
 \end{figure}
 
-
 \subsection{Taylor--Green vortex}
 \label{sec:mortensen:TG}
+\index{Taylor--Green vortex}
 
 Finally, we consider a real transition to turbulence problem. The
 Taylor--Green vortex is characterized by an initialization based on
