--- a/tex/23.tex
+++ b/tex/23.tex
@@ -4,6 +4,8 @@
               {Kristian Valen-Sendstad, Kent-Andre Mardal and Anders Logg}
               {kvs-2}
 
+\index{hemodynamics}
+
 Computational fluid dynamics (CFD) is a tool with great potential in
 medicine. Using traditional engineering techniques, one may compute,
 e.g., the blood flow in arteries and the resulting stress on the
