--- a/tex/24.tex
+++ b/tex/24.tex
@@ -4,6 +4,8 @@
               {Susanne St\o le-Hentschel, Svein Linge, Alf Emil L{\o}vgren and Kent-Andre Mardal}
               {hentschel}
 
+\index{cerebrospinal fluid flow}
+
 This chapter concerns the flow of cerebrospinal fluid (CSF) in the
 subarachnoid space that surrounds the spinal cord. Particular
 attention is given to abnormal flow and pressure resulting from the
