--- a/tex/26.tex
+++ b/tex/26.tex
@@ -4,6 +4,8 @@
               {Kristian B. {\O}lgaard and Garth N. Wells}
               {oelgaard-1}
 
+\index{solid mechanics}
+
 %------------------------------------------------------------------------------
 Problems in solid mechanics constitute perhaps the largest field of
 application of finite element methods. The vast majority of solid
@@ -272,6 +274,7 @@ momentum problem, for the static case.
 
 %------------------------------------------------------------------------------
 \section{Constitutive models}
+\index{constitutive model}
 
 A constitutive model describes the relationship between stress and
 deformation.  The stress can be defined explicitly in terms of primal
@@ -287,8 +290,9 @@ the preceding section to yield a governing equation.
 %------------------------------------------------------------------------------
 \subsection{Linearized elasticity}
 \label{sec:oelgaard-1:lin_elasticity}
+\index{linear elasticity}
 
-For linearized elasticity the stress tensor as a function of the strain
+For linearized elasticity, the stress tensor as a function of the strain
 tensor for an isotropic, homogeneous material is given by
 %
 \begin{equation}
@@ -318,6 +322,7 @@ and $\delta_{ij}$ is the Kronecker-Delta.
 %------------------------------------------------------------------------------
 \subsection{Flow theory of plasticity}
 \label{sec:oelgaard-1:plasticity}
+\index{plasticity}
 
 We consider the standard flow theory model of plasticity, and present
 only the background necessary to support the examples that we will
@@ -480,6 +485,7 @@ automatically from an expression for~$\Psi_{0}$.
 %------------------------------------------------------------------------------
 \section{Time integration}
 \label{sec:oelgaard-1:time_integration}
+\index{time integration}
 
 In this chapter we focus on the Newmark family of methods, which are
 widely used in structural dynamics.  It is a direct integration method,
@@ -539,6 +545,7 @@ derivatives of~$u$ at time~$t_{n+1}$.
 %------------------------------------------------------------------------------
 \section{Linearization issues for complex constitutive models}
 \label{sec:oelgaard-1:linearization}
+\index{linearization}
 
 Solving problems with nonlinear constitutive models, such
 as plasticity, using Newton's method requires linearization
@@ -1314,6 +1321,7 @@ while (t < T)
 %------------------------------------------------------------------------------
 \subsection{Hyperelasticity}
 \label{sec:oelgaard-1:examples_hyp_elas}
+\index{hyperelasticity}
 
 We present the construction of a solver for a hyperelastic problem that is
 phrased as a minimization problem, following the minimization framework
@@ -1412,6 +1420,7 @@ may be necessary to apply a path following solution method.
 
 %------------------------------------------------------------------------------
 \subsection{Elastodynamics}
+\index{elastodynamics}
 
 We present now a linearized elastodynamics problem to
 illustrate the solution of time-dependent problems. The
