--- a/tex/27.tex
+++ b/tex/27.tex
@@ -27,6 +27,11 @@
               {Harish Narayanan}
               {narayanan}
 
+\index{solid mechanics}
+\index{nonlinear elasticity}
+\index{elasticity}
+\index{hyperelasticity}
+
 Nonlinear elasticity theory plays a fundamental role in modeling the
 mechanical response of many polymeric and biological materials. Such
 materials are capable of undergoing finite deformation, and their
@@ -189,6 +194,7 @@ Lagrangian description by elastic materials with suitably chosen
 stress responses.
 
 \subsection{Accounting for different materials}
+\index{material models}
 
 It is important to reiterate that \eqref{eq:narayanan:balance%
 -of-momentum} is valid for all materials. In order to differentiate
@@ -592,6 +598,7 @@ linear momentum.}
 
 \vspace*{-3pt}
 \subsection{Time-stepping algorithms}
+\index{time integration}
 
 \twist{} implements two time integration algorithms to solve the weak
 form of the fully dynamic balance of linear momentum
@@ -792,6 +799,7 @@ specifying the problem. Figure~\ref{code:narayanan:dynamicrelease} is
 an example showing this.
 
 \section{Examples of \twist{} usage}
+\index{CBC.Twist}
 
 The algorithms discussed thus far serve primarily to explain the
 computational framework's inner working, and are not at the level at
