--- a/tex/28.tex
+++ b/tex/28.tex
@@ -4,6 +4,10 @@
               {Johan Hoffman, Johan Jansson, Niclas Jansson, Claes Johnson and Rodrigo Vilela De Abreu}
               {hoffman-1}
 
+\index{Unicorn}
+\index{fluid--structure interaction}
+\index{turbulent flow}
+
 The FEniCS Project aims towards the goals of generality, efficiency,
 and simplicity, concerning mathematical methodology, implementation
 and application, and the Unicorn project is an implementation aimed at
