--- a/tex/29.tex
+++ b/tex/29.tex
@@ -4,6 +4,8 @@
               {Kristoffer Selim}
               {selim}
 
+\index{fluid--structure interaction}
+
 %% My commands
 \newcommand{\subdt}{\textrm{d}_t}
 \newcommand{\divv}{\textrm{div}\;}
@@ -118,7 +120,8 @@ practical point of view naturally posed in different frameworks, the
 so-called Lagrangian framework and the Eulerian framework.
 
 %------------------------------------------------------------------------------
-\subsection{ Lagrangian framework and structural mechanics}
+\subsection{Lagrangian framework and structural mechanics}
+\index{Lagrangian framework}
 
 An essential kinematic measure in structural mechanics is the
 displacement field which is naturally posed in the Lagrangian
@@ -162,6 +165,7 @@ in general, see \citet{Gurtin1981,Holzapfel2000}.
 %------------------------------------------------------------------------------
 \subsection{Eulerian framework and fluid mechanics}
 \label{selim:sec:fluid}
+\index{Eulerian framework}
 
 In fluid mechanics, the primary variables for describing the fluid
 motion are the \emph{fluid velocity} $\uF$ and the \emph{fluid pressure}
@@ -193,6 +197,7 @@ see~\citet{Batchelor1967,Panton1984}.
 %------------------------------------------------------------------------------
 \section{FSI and the ALE computational framework}
 \label{selim:sec:ale}
+\index{ALE}
 
 To combine the Lagrangian and the Eulerian frameworks
 in a computational setting, the fluid traction force from
@@ -583,6 +588,8 @@ is described below.
 
 %------------------------------------------------------------------------------
 \section{Duality--based error control}
+\index{error estimation}
+\index{dual problem}
 
 As mentioned in the beginning of this chapter, in many cases we are
 only interested in computing one output quantity of the fully coupled
@@ -814,6 +821,7 @@ mesh.  For a more comprehensive discussion and derivation of this
 
 %------------------------------------------------------------------------------
 \subsection{The adaptive algorithm}
+\index{adaptivity}
 
 With the \apost{} error estimate presented
 in~\eqref{selim:eq:aposteriori-Eh}--\eqref{selim:eq:aposteriori-Ec}, we construct an algorithm based on a
