--- a/tex/3.tex
+++ b/tex/3.tex
@@ -20,6 +20,7 @@ of some of the most common, and some more unusual, finite elements.
 
 %------------------------------------------------------------------------------
 \section{The finite element definition}
+\index{finite element!definition}
 
 The Ciarlet definition of a \emph{finite element} was first introduced
 in a set of lecture notes by \citet{Ciarlet1975} and became popular
@@ -251,7 +252,7 @@ this is less common in practice.
 
 \vspace*{7pt}
 \subsection{The Lagrange element}
-\index{Finite element!Lagrange}
+\index{finite element!Lagrange}
 
 The best-known and most widely used finite element is the $\Poly{1}$
 Lagrange element. This lowest-degree triangle is sometimes called the
@@ -341,7 +342,7 @@ Vector-valued or tensor-valued Lagrange elements are usually constructed
 by using a Lagrange element for each component.
 
 \subsection{The Crouzeix--Raviart element}
-\index{Finite element!Crouzeix--Raviart}
+\index{finite element!Crouzeix--Raviart}
 
 {The Crouzeix--Raviart element was introduced in
 \citet{CrouzeixRaviart1973} as a technique for solving the stationary
@@ -449,7 +450,7 @@ element are included.
 
 \vspace*{-6pt}\subsection{The Raviart--Thomas element}
 \label{sec:raviartthomas}
-\index{Finite element!Raviart--Thomas}
+\index{finite element!Raviart--Thomas}
 
 The Raviart--Thomas element was introduced
 by \citet{RaviartThomas1977}. It was the first element to discretize
@@ -564,7 +565,7 @@ that \citep[Chapter III.3]{BrezziFortin1991}
 
 %------------------------------------------------------------------------------
 \subsection{The Brezzi--Douglas--Marini element}
-\index{Finite element!Brezzi--Douglas--Marini}
+\index{finite element!Brezzi--Douglas--Marini}
 
 The Brezzi--Douglas--Marini element was introduced by Brezzi,
 Douglas and Marini in two dimensions (for triangles) in
@@ -631,7 +632,7 @@ the polynomial degree between triangles were derived
 in \citet{BrezziDouglasMarini1985a}.
 
 \subsection{The Mardal-Tai-Winther element}
-\index{Finite element!Mardal--Tai--Winther}
+\index{finite element!Mardal--Tai--Winther}
 
 The Mardal--Tai--Winther element was introduced
 in \citet{MardalTaiWinther2002} as a finite element suitable for the
@@ -688,7 +689,7 @@ degrees of freedom, we have that
 \end{equation}
 
 \subsection{The Arnold--Winther element}
-\index{Finite element!Arnold--Winther}
+\index{finite element!Arnold--Winther}
 
 The Arnold--Winther element was introduced
 by \citet{ArnoldWinther2002}. This paper presented the first stable
@@ -796,7 +797,7 @@ in \citet{ArnoldFalkWinther2006c}.
 
 %------------------------------------------------------------------------------
 \subsection{The \nedelec{} $\Hcurl$ element of the first kind}
-\index{Finite element!N\'ed\'elec}
+\index{finite element!N\'ed\'elec}
 \label{sec:nedelec:first}
 
 \begin{definition}[\nedelec{} $\Hcurl$ element of the first kind]
@@ -881,7 +882,7 @@ degrees of freedom above, we have that \citep[Theorem 2]{Nedelec1980}
 
 \subsection{The $\Hcurl$ \nedelec{} element of the second kind}
 \label{sec:nedelec:second}
-\index{Finite element!N\'ed\'elec}
+\index{finite element!N\'ed\'elec}
 
 \begin{definition}[\nedelec{} $\Hcurl$ element of the second kind]
   The \nedelec{} element of the second kind ($\mathrm{NED}^2_q$) is
@@ -976,7 +977,7 @@ problems. Moreover, the decoupling of each individual element provides
 an increased opportunity for parallelism and $hp$-adaptivity.
 
 \subsection{Discontinuous Lagrange}
-\index{Finite element!Discontinuous Lagrange}
+\index{finite element!Discontinuous Lagrange}
 
 \begin{definition}[Discontinuous Lagrange element]
   The discontinuous Lagrange element ($\mathrm{DG}_q$)
@@ -1066,7 +1067,7 @@ and the nonconforming Hermite and Morley elements.
 
 
 \subsection{The Argyris element}
-\index{Finite element!Argyris}
+\index{finite element!Argyris}
 
 The Argyris element \citep{ArgyrisFriedScharpf1968,Ciarlet2002} is
 based on the space $\Poly{5}(T)$ of quintic polynomials over some triangle
@@ -1128,7 +1129,7 @@ higher than quintic, still giving \( C^1 \) continuity with \( C^2 \)
 continuity at the vertices \citep{SolinSegethDolevzel2004}.
 
 \subsection{The Hermite element}
-\index{Finite element!Hermite}
+\index{finite element!Hermite}
 
 \looseness-1{}The Hermite element generalizes the classic cubic Hermite
 interpolating polynomials on the line segment
@@ -1198,7 +1199,7 @@ degree \citep{BrennerScott2008}.
 
 
 \subsection{The Morley element}
-\index{Finite element!Morley}
+\index{finite element!Morley}
 
 The Morley triangle defined in \citet{Morley1968} is a simple
 $H^2$-nonconforming quadratic element that is used in fourth-degree
@@ -1281,7 +1282,7 @@ Each row of the stress tensor is approximated by the lowest degree
 Raviart--Thomas element enriched by the curl of the cubic bubble
 element \citep{ArnoldBrezziDouglas1984}.
 
-\index{Finite element!Bubble elements}
+\index{finite element!Bubble element}
 
 \begin{definition}[Bubble element]
   The bubble element ($B_q$) is defined for $q \geqslant (d+1)$ by
