--- a/tex/4.tex
+++ b/tex/4.tex
@@ -675,6 +675,8 @@ integration, pointwise evaluation and differentiation.
 
 
 \subsection{The mapping of the reference element}
+\index{mapping from reference element}
+\index{affine mapping}
 
 A common practice, employed throughout the FEniCS software and in many
 other finite element codes, is to map the nodal basis functions from the
@@ -732,6 +734,7 @@ has far better properties when defined globally compared to its analogous
 definition in terms of a reference element.
 
 \subsection{Local to global mapping of degrees of freedom}
+\index{local-to-global mapping}
 
 As shown in Figure~\ref{fig:kirby-1:patch}, finite elements are
 patched together with a continuity depending on the degrees of freedom.
