--- a/tex/5.tex
+++ b/tex/5.tex
@@ -12,6 +12,7 @@ variational forms used throughout FEniCS.
 
 %------------------------------------------------------------------------------
 \section{Background}
+\index{variational problem}
 
 In Chapter~\ref{chap:kirby-7}, we introduced the following canonical
 variational problem: find $u \in V$ such that
@@ -53,6 +54,8 @@ related concepts such as the \emph{action}, \emph{derivative} and
 
 %------------------------------------------------------------------------------
 \section{Multilinear forms}
+\index{multilinear form}
+\index{form!multilinear}
 
 A form is a mapping from the product of a given sequence
 $\{V_j\}_{j=1}^{\rho}$ of function spaces to a real number:
@@ -209,6 +212,8 @@ is $\rho = 0$ and both forms have two coefficients.
 \enlargethispage{12pt}
 
 \vspace*{-6pt}\subsection{Canonical form}
+\index{canonical form}
+\index{form!canonical}
 
 FEniCS automatically handles the representation and evaluation of a
 large class of multilinear forms, but not all. FEniCS is currently
@@ -241,6 +246,7 @@ FEniCS but may be added in the future.
 
 \section{Discretizing multilinear forms}
 \label{sec:kirby-5:discretizing}
+\index{discrete operator}
 
 As we saw in Chapter~\ref{chap:kirby-7}, one may obtain the finite
 element approximation $u_h = \sum_{j=1}^N U_j \phi_j \approx u$ of the
@@ -327,6 +333,8 @@ common facet~$S$ as depicted in Figure~\ref{fig:kirby-5:tensors}. For
 details, we refer to~\citet{OelgaardLoggWells2008}.
 
 \section{The action of a multilinear form}
+\index{form!action of}
+\index{action}
 
 Consider the bilinear form
 \begin{equation}
@@ -394,6 +402,7 @@ Aa = action(a)
 \end{python}
 
 \section{The derivative of a multilinear form}
+\index{form!derivative of}
 
 When discretizing nonlinear variational problems, it may be of
 interest to compute the derivative of a multilinear form with respect
@@ -443,6 +452,8 @@ Da = derivative(a, u)
 \end{python}
 
 \section{The adjoint of a bilinear form}
+\index{form!adjoint of}
+\index{adjoint}
 
 The adjoint $a^*$ of a bilinear form~$a$ is the form obtained by
 interchanging the two arguments:
