--- a/tex/6.tex
+++ b/tex/6.tex
@@ -16,6 +16,8 @@ and extensions to matrix-free methods.
 
 %------------------------------------------------------------------------------
 \section{Assembly algorithm}
+\index{finite element!assembly}
+\index{assembly}
 
 As seen in Chapter~\ref{chap:kirby-5}, the discrete operator of a
 multilinear form~$a : V_{\rho} \times \cdots \times V_2 \times V_1
@@ -71,6 +73,8 @@ into local contributions from facets.
   \caption{Straightforward (naive) ``assembly'' algorithm.}
   \label{alg:assembly,naive}
 \end{algorithm}
+
+\index{assembly!algorithm}
 
 To formulate the general assembly algorithm, let $\iota_T^j : [1,n_j]
 \rightarrow [1,N_j]$ denote the local-to-global mapping introduced in
@@ -156,6 +160,7 @@ Figure~\ref{fig:insertion}.
 
 %------------------------------------------------------------------------------
 \section{Implementation}
+\index{assembly!implementation}
 
 In FEniCS, the assembly algorithm (Algorithm~\ref{alg:assembly}) is
 implemented as part of DOLFIN (see
@@ -231,6 +236,7 @@ are assembly over cells, exterior facets and interior facets.
 
 %------------------------------------------------------------------------------
 \section{Symmetric application of boundary conditions}
+\index{boundary condition!symmetric application}
 
 For symmetric problems, it is useful to be able to apply Dirichlet
 boundary conditions in a fashion that preserves the symmetry of the
@@ -291,6 +297,7 @@ the solution (including known Dirichlet values).
 
 %------------------------------------------------------------------------------
 \section{Parallel assembly}
+\index{assembly!parallel implementation}
 
 The assembly algorithms remain unchanged in a distributed\footnote{By
   distributed assembly, we refer here to assembly in parallel on a
@@ -333,6 +340,7 @@ Multi-threaded\footnote{By multi-threaded assembly, we refer here to
 
 %------------------------------------------------------------------------------
 \section{Matrix-free methods}
+\index{matrix-free method}
 
 \looseness-1{}A feature of Krylov subspace methods and some other iterative methods
 for linear systems of the form $AU = b$ is that they rely only on the
