--- a/tex/7.tex
+++ b/tex/7.tex
@@ -23,6 +23,8 @@ representations.
 
 \section{Standard quadrature representation}
 \label{oelgaard-2:sec:standard_quadrature_representation}
+\index{numerical quadrature}
+\index{quadrature representation}
 
 To illustrate the standard quadrature representation \index{quadrature
 representation} and optimizations implemented in \ffc{} we consider
