--- a/tex/8.tex
+++ b/tex/8.tex
@@ -23,6 +23,7 @@ tensor~$A_T$ can be computed efficiently by an approach referred to as
 
 %------------------------------------------------------------------------------
 \section{Tensor representation for Poisson's equation}
+\index{tensor representation}
 
 We first describe how one may express the cell tensor for Poisson's
 equation as a special tensor contraction and explain below how this
@@ -136,6 +137,7 @@ find a reduced-arithmetic computation for the tensor contraction.
 
 %------------------------------------------------------------------------------
 \section{A representation theorem}
+\index{tensor representation}
 
 In~\citet{KirbyLogg2006}, it was proved that the cell tensor for any
 affinely mapped monomial multilinear form may be expressed as a sum
