--- a/tex/9.tex
+++ b/tex/9.tex
@@ -34,6 +34,7 @@ briefly discuss optimizations using more traditional optimized dense
 linear algebra packages.
 
 \section{Optimization framework}
+\index{tensor representation!optimization of}
 
 The tensor paradigm developed in Chapter~\ref{chap:kirby-8} arrives at
 the representation
@@ -111,6 +112,7 @@ A^0 =
 \end{equation}
 
 \section{Topological optimization}
+\index{optimization!topological}
 
 It is possible to apply the matrix $A$, corresponding to the reference
 tensor $A^0$ depicted in~\eqref{eq:kirby-4:ALap}, to an arbitrary
@@ -286,6 +288,7 @@ partial collinearity relations.\enlargethispage{15pt}
 \vspace*{-3pt}
 \section{Geometric optimization}
 \label{sec:kirby-4:geom}
+\index{optimization!geometric}
 
 When relations between more than two rows are considered, the
 optimization problem may no longer be phrased in terms of a graph, but
@@ -449,6 +452,7 @@ relations. These are shown in Table~\ref{tab:kirby-4:geom}.
 
 
 \section{Optimization by dense linear algebra}
+\index{optimization!BLAS}
 
 As an alternative to optimizations that try to find a reduced arithmetic
 for computing the element tensor~$A_T$, one may consider computing
